eliminacion de warnings